# pango_aliasor

./: .gitignore  CHANGELOG  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pytest.yaml
src/pango_aliasor/: README.md  aliasor.py
tests/: test_aliasor.py
