[metadata]
name = pango_aliasor
version = 0.0.1
author = Cornelius Roemer
author_email = cornelius.roemer@gmail.com
description = Pango lineage aliasing and dealiasing
url = https://github.com/corneliusroemer/pango_aliasor
# project_urls =
#     Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src