[metadata]
name = pango_aliasor
version = 0.1.1
author = Cornelius Roemer
author_email = cornelius.roemer@gmail.com
description = Pango lineage aliasing and dealiasing
url = https://github.com/corneliusroemer/pango_aliasor
project_urls =
    Bug Tracker = https://github.com/corneliusroemer/pango_aliasor/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
license_file = LICENSE

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src