[metadata]
name = pango_aliasor
version = 0.2.0
description = Pango lineage aliasing and dealiasing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/corneliusroemer/pango_aliasor
author = Cornelius Roemer
author_email = cornelius.roemer@gmail.com
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
Bug Tracker = https://github.com/corneliusroemer/pango_aliasor/issues
License = : OSI Approved :: MIT License
Operating System = : OS Independent
Programming Language = : Python :: 3

[options]
packages = find:
python_requires = >=3.7
package_dir =
    = src

[options.packages.find]
where = src
